# boilerplate_stack

./: .gitignore  LICENSE
backend/: .env_example  README.md  manage.py  pyproject.toml
backend/backend/: asgi.py  settings.py  wsgi.py
backend/backend/settings/: base.py  dev.py  prod.py
